@@ -5,7 +5,8 @@ Changelog:
 ----------------------------------------------------------------------
 1.9.7 - 
 ----------------------------------------------------------------------
-
+- Fixed: E-newsletter activation error. Tables of enewletter would not be created
+- Fixed: Session warning
 
 ----------------------------------------------------------------------
 1.9.6 - 2017-09-08
